# pipetracker

./: .env.example  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  MANIFEST.ini  Makefile  README.md  docker-compose.yml  logging.conf  pipetrack.yaml  pipetracker.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-ci.yml
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  architecture.md  deployment.md  developer_guide.md  development.md  installation.md  plugins.md  usage.md  user_guide.md
examples/: .env.example  config.yaml
pipetrack/api/: main.py
pipetrack/api/routes/: trace.py
pipetrack/cli/: main.py
pipetrack/cli/command/: config.py  trace.py
pipetrack/core/: config_loader.py  log_scanner.py  pattern_matcher.py  performance.py  plugin_loader.py  security.py  trace_builder.py  utils.py  verifier.py  visualizer.py
pipetrack/plugins/: base.py  datadog_plugin.py  gcs_plugin.py  kafka_plugin.py  loader.py  local_plugin.py  s3_plugin.py
pipetracker/core/: log_scanner.py
tests/: test_api.py  test_cli.py  test_core.py
tests/integration/: test_full_trace.py
tests/unit/: test_cli_commands.py  test_config_loader.py  test_datadog_plugin.py  test_gcs_plugin.py  test_kafka_plugin.py  test_loader.py  test_local_plugin.py  test_log_scanner.py  test_s3_plugin.py  test_trace_builder.py  test_verifier.py  test_visualizer.py
