[metadata]
name = pipetrack
version = 1.0.0
author = Dare Afolabi
author_email = dare.afolabi@outlook.com
description = Log tracing and pipeline monitoring framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dare-afolabi/pipetrack
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: FastAPI
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries

[options]
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires =
    fastapi
    pydantic
    pyyaml
    click
    loguru
    uvicorn

[options.extras_require]
dev =
    pytest
    pytest-mock
    pytest-cov
    requests-mock
    black
    mypy

[options.entry_points]
console_scripts =
    pipetrack = pipetrack.cli.main:app

[tool:pytest]
testpaths = tests

[flake8]
exclude = venv/,*/site-packages/*
